Adding title adding mailto address to the contact button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Title</title>
+    <title>Black Carbon Recruitment</title>
 </head>
 <body>
     <div class="wrapper">
@@ -28,7 +28,7 @@
             <div class="hero-section">
                 <div class="heading">Find The Perfect People</div>
                 <div class="text">WE DO WHAT WE DO BECAUSE WE <br> BELIEVE IN QUALITY AND VALUE ABOVE <br> EVERYTHING ELSE</div>
-                <div class="button"><a href="#" class="btn btn-contact">CONTACT US</a></div>
+                <div class="button"><a href="mailto:contact@blackcarbonrecruitment.co.uk" class="btn btn-contact">CONTACT US</a></div>
             </div>
             <div class="vector">
                <div class="text-center"> <a href="#offers"><img src="assets/imgs/arrow.png" alt=""></a></div>
