--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     <p>Need to fill a position ?</p>
                                     <p>If you need software engineers we can help.</p>
                                     <p>We have in house software engineers that know how interpret your job specs and understand how to find you top quality talent for you business.</p>
-                                    <p>We like to treat you roles differently to other recruitment companies in the market. We don’t throw tons of CV’s for you to sift through, we think that it is our job to find the highest quality talent in the market and bring them to you.</p>
+                                    <p>We like to treat your roles differently to other recruitment companies in the market. We don’t throw tons of CV’s for you to sift through, we think that it is our job to find the highest quality talent in the market and bring them to you.</p>
                                     <p>We have all our roles vetted through our in house developers making sure we only send you the best</p>
                                 </div>
                             </div>
